fixed scroll issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,8 @@
 :root {
   --font-family: 'Comfortaa';
 }
+
+body{
+  height: 100%;
+  overflow: hidden;
+}
